<resources>

    <!-- Main View -->
    <string name="app_name">CMA Activity Report</string>
    <string name="actionbar_title">CMA Activity Report</string>

    <string name="event_info">Event Information</string>
    <string name="event_name">Event Name</string>
    <string name="event_type">Type</string>
    <string name="event_date">Date</string>
    <string name="event_attend">Attendance</string>
    <string name="event_salvations">Salvations</string>
    <string name="event_rededications">Rededications</string>
    <string name="event_other">Other Ministry</string>
    <string name="event_totals">Totals</string>
    <string name="edittext_type">type of event</string>
    <string name="edittext_date">date of event</string>

    <string name="edittext_def_event_name">CMA Event Name</string>
    <string name="edittext_def_type">CMA Event_Type</string>
    <string name="edittext_def_date">CMA Event Date</string>
    <string name="edittext_def_attend">0</string>
    <string name="edittext_def_salvations">0</string>
    <string name="edittext_def_rededications">0</string>
    <string name="edittext_def_other">0</string>
    <string name="edittext_def_comment">Comment</string>

    <string name="button_send">Send</string>
    <string name="event_comment">Comment</string>

    <!-- Action Bar Menu Item Titles -->
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_save">Save</string>
    <string name="action_bar_recall">Recall</string>
    <string name="action_bar_clear">Clear</string>
    <string name="action_bar_about">About</string>

    <!-- Email Setting Strings -->
    <string name="settings_action_bar_title">Activity Report Settings</string>
    <string name="settings_email_title">EMail</string>
    <string name="settings_email_init_def">false</string>
    <string name="settings_email_to">To:</string>
    <string name="settings_email_to_def">Chapter Secretary</string>
    <string name="settings_email_addr">Addr:</string>
    <string name="settings_email_addr_def">pauldshep@gmail.com</string>
    <string name="settings_email_from">From:</string>
    <string name="settings_email_from_def">CMA User</string>
    <string name="settings_email_subject">Subject:</string>
    <string name="settings_email_subject_def">CMA Activity Report</string>
    <string name="email_button_use">USE</string>
    <string name="email_button_reset">RESET</string>
    <string name="email_button_abort">ABORT</string>
    <string name="email_action_bar_reset">Reset</string>
    <string name="email_action_bar_help">Help</string>

    <!-- Help button strings -->
    <string name="help_attendance">Number of CMA Members at the event</string>
    <string name="help_salvation">Those you personally prayed with to accept Christ as Lord and Savior</string>
    <string name="help_rededication">Those you personally prayed with for rededication or recommitment to Christ</string>
    <string name="help_other">Those you personally prayed with or helped in a matter other than salvation or rededication</string>


    <!-- About Activity Strings -->
    <string name="activity_about_title">About CMA Activity Report</string>
    <string name="activity_about_text">
        This application was written for the Christian Motorcyclists Association
        to automate the creation of event activity reports.  It\'s author is
        Shepherd Software Solutions.  Please direct any comments and suggestions
        to: pauldshep@gmail.com
    </string>
    <string name="activity_about_email_button">Email Issue</string>
    <string name="activity_about_my_email_addr">pauldshep@gmail.com</string>
    <string name="activity_about_email_subject">CMA Activity Report Comments</string>
    <string name="activity_about_email_text">
        User Info\n  Name:  \n  Chapter:  \n  Officer:  \n    Phone:  \n\n
        Phone or Tablet\n  Manufacturer:  \n  Model:  \n  Operating System: \n\n
        Description of Issue:\n\n
    </string>

    <!-- General Definitions - do not translate -->
    <string name="boolean_true">true</string>
    <string name="boolean_false">false</string>
    <string name="increment_char">+</string>
    <string name="decrement_char">-</string>

</resources>
