<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sss.android.cmaactivityreport.ActivityAbout">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_about_title"
        android:textStyle="bold"/>

    <ScrollView
            android:id="@+id/messageScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_about_text"
                android:paddingTop="10dp"/>

            <Button
                android:id="@+id/button_about_email"
                android:text="@string/activity_about_email_button"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
